# donationwallet

./: .gitignore  .gitmodules  flutter_rust_bridge.yaml
lib/: bridge_definitions.dart  bridge_definitions.freezed.dart  bridge_generated.dart  home.dart  information.dart  introduction.dart  load_wallet.dart  main.dart  outputs.dart  restore.dart  settings.dart  spend.dart  storage.dart  wallet.dart
lib/data/models/: outputs_model.dart  sp_client_model.dart  sp_wallet_model.dart
lib/rust/: frb_generated.dart  frb_generated.io.dart  frb_generated.web.dart
lib/rust/api/: simple.dart  simple.freezed.dart
lib/src/data/models/: sp_client_model.dart  sp_receiver_model.dart
lib/src/data/providers/: chain_api.dart  rust_api.dart  secure_storage.dart
lib/src/data/repositories/: chain_repository.dart  transaction_repository.dart  wallet_repository.dart
lib/src/utils/: constants.dart
rust/: Cargo.toml
rust/dana_core/: Cargo.toml
rust/dana_core/src/: history.rs  lib.rs  outputs.rs
rust/flutter_bridge/: Cargo.toml
rust/flutter_bridge/src/: frb_generated.rs  lib.rs  logger.rs  stream.rs  updater.rs
rust/flutter_bridge/src/api/: backup.rs  chain.rs  mod.rs  stream.rs  structs.rs  wallet.rs
rust/flutter_bridge/src/api/wallet/: info.rs  scan.rs  setup.rs  transaction.rs
rust/src/: frb_generated.rs  stream.rs
rust/src/api/: outputs.rs  simple.rs  structs.rs
rust/src/blindbit/: logic.rs
rust/src/wallet/: wallet.rs
sp_backend/: Cargo.toml
sp_backend/.github/workflows/: rust.yml
sp_backend/src/: api.rs  lib.rs  nakamotoclient.rs
(+22 files in other folders)
