[package]
name = "flutter_bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib", "staticlib"]

[dependencies]
base64 = "0.22.1"
dana_core = { path = "../dana_core" }
flutter_rust_bridge = "=2.9.0"
rand = "0.9.0"
rust-crypto = "0.2.36"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.107"
serde_with = "3.6.0"
pushtx = { git = "https://github.com/cygnet3/pushtx", branch = "master" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(frb_expand)'] }
